--- a/styles.css
+++ b/styles.css
@@ -17,23 +17,10 @@ h1 {
 
 }
 
-h2 {
-  font-size: 30px;
-  font-weight: bold;
-}
-
 h3 {
   font-size: 25px;
   font-weight: bold;
   padding-top: 5px;
-}
-
-.score-board {
-  width: 90px;
-  height: 70px;
-  text-align: center;
-  margin: auto;
-  padding-top: 20px;
 }
 
 .container {
@@ -49,14 +36,13 @@ h3 {
 
 .message {
   width: 20%;
-  margin: auto;
+  margin: 30px auto;
   height: 30px;
   font-size: 25px;
   text-align: center;
   padding-top: 10px;
   font-weight: bold;
-  color: white;
-  text-shadow: black 3px 3px;
+  color: black;
 }
 
 .position-of-buttons {
@@ -71,9 +57,8 @@ h3 {
 
 button {
   width: 90px;
-  height: 30px;
-  margin-right: 10px;
-  margin-left: 10px;
+  height: 40px;
+  margin: 30px 50px 0 20px;
   border-radius: 10px;
   border: 2px solid black;
   background-color: #60646A;
