--- a/styles.css
+++ b/styles.css
@@ -40,31 +40,22 @@ h1,
 
 .message {
   color: black;
-  font-size: 30px;
   height: 30px;
   margin: 30px auto;
   padding-top: 10px;
   width: 40%;
 }
 
-.position-of-buttons {
-  display: inline-block;
+.message, .start {
+  font-size: 30px;
+}
+
+.start {
+  font-weight: bold;
   height: 60px;
   margin-top: 5px;
   margin: auto;
   width: 30%;
-}
-
-button {
-  background-color: #60646A;
-  border-radius: 10px;
-  border: 2px solid black;
-  color: white;
-  font-family: 'Indie Flower', cursive;
-  font-size: 20px;
-  height: 40px;
-  margin: 10px 20px 0 20px;
-  width: 90px;
 }
 
 @media only screen
