--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,11 @@ h1,
 
 #snake-game {
   background: url(images/airplane.png) no-repeat;
+  margin-top: 20px;
 }
 
 h1,
-.message,
-.position-of-buttons {
+.message {
   text-align: center;
 }
 
@@ -44,18 +44,7 @@ h1,
   margin: 30px auto;
   padding-top: 10px;
   width: 40%;
-}
-
-.message, .start {
   font-size: 30px;
-}
-
-.start {
-  font-weight: bold;
-  height: 60px;
-  margin-top: 5px;
-  margin: auto;
-  width: 30%;
 }
 
 @media only screen
