--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background: url(images/clouds2.jpg) no-repeat;
   background-size: cover;
   flex-direction: column;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Rokkitt', serif;
 }
 
 body,
